add metrics endpoint
